--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5175
-DATABASE_URL="postgresql://postgres:P@ssw0rd!@localhost:5432/curiosdev?schema=curiosdev-blog"
+PORT=""
+DATABASE_URL=""
 FILE_SERVER=""
